--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@monaco-editor/react": "^4.6.0",
     "allotment": "^1.20.2",
     "antd": "^5.20.1",
     "clsx": "^2.1.1",
