--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "@monaco-editor/react": "^4.6.0",
+    "@types/lodash-es": "^4.17.12",
     "allotment": "^1.20.2",
     "antd": "^5.20.1",
     "clsx": "^2.1.1",
+    "lodash-es": "^4.17.21",
+    "monaco-editor": "^0.50.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "style-to-object": "^1.0.6",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
