--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/lodash-es": "^4.17.12",
     "allotment": "^1.20.2",
     "antd": "^5.20.1",
+    "axios": "^1.7.4",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.50.0",
     "react": "^18.3.1",
