--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc -b && vite build",
     "dev": "vite",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server:start": "tsx server/index.ts"
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
@@ -17,7 +18,9 @@
     "antd": "^5.20.1",
     "axios": "^1.7.4",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.13",
+    "express": "^4.19.2",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.50.0",
     "react": "^18.3.1",
@@ -30,6 +33,7 @@
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@mudssky/prettier-config-custom": "^1.1.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^22.2.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -44,6 +48,7 @@
     "prettier-plugin-packagejson": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.9",
+    "tsx": "^4.17.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.4.0"
